--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,81 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  margin: 10px;
+  padding: 0;
+  box-sizing: border-box ;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+main {
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+main h1 {
+  font-size: 35px;
+  color: #fc66d6;
+  text-align: center;
+}
+
+input[type="text"] {
+  flex: 1;
+  padding: 10px;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  margin: 20;
+}
+
+button {
+  padding: 10px 16px;
+  background-color: #fc66d6;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #fc66d6;
+}
+
+/* Lista de tarefas */
+
+li {
+  background: #ddd;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  border: 1px solid #000000;
+}
+
+.feita {
+  text-decoration: line-through;
+  color: #938e8e;
+  opacity: 0.5;
+}
+
+.botao-excluir {
+  background: transparent;
+  border: none;
+  color: #060606;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 0;
+  transition: transform 0.1s;
+}
+
+.botao-excluir:hover {
+  transform: scale(1.2);
 }
